<resources>
    <string name="app_name">Калькулятор ремонта</string>
    <string name="title">Приложение для расчета стоимости материалов для ремонта с помощью Яндекс.Маркет</string>
    <string name="tiles">Укладка плитки</string>
    <string name="important">Это важно</string>
    <string name="Preferences">Настройки</string>
    <string name="List">Список</string>
    <string name="cancel">Отмена</string>
    <string name="recommended_for_buy">Рекомендуется к покупке</string>
    <string name="in_total">Итого:</string>
    <string name="open_all_materials">Открыть все товары</string>
    <string name="choose_another_remont">Выбрать другой ремонт</string>
    <string name="wallpapers">Поклейка обоев</string>
    <string name="floor">Заливка пола</string>
    <string name="walls">Установка перегородок</string>
    <string name="parameters">Параметры</string>
    <string name="accept">Применить</string>
    <string name="floor_square">Площадь пола</string>
    <string name="sort_by">Сортировать по</string>
    <string name="color">Цвет</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="price">Цена</string>
    <string name="plus">+</string>
    <string name="please_wait">Подождите, выполняется поиск</string>
    <string name="width">Ширина</string>
    <string name="length">Длина</string>
    <string name="minus">-</string>
    <string name="close">X</string>
    <string name="height">Высота</string>
    <string name="walls_square">Площадь стен</string>
    <string name="hurdle_square">Площадь перегородки</string>
</resources>
