<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TilesScreenActivity">

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toEndOf="@+id/floorSquare"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5sp"
        android:text="@string/parameters"
        android:textColor="#151522"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="5sp"
        android:text="@string/accept"
        android:textColor="#6979f8"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wallsSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="5sp"
        android:text="@string/hurdle_square"
        android:textColor="#151522"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackButton" />

    <TextView
        android:id="@+id/goBackButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="5sp"
        android:text="@string/cancel"
        android:textColor="#999999"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#151522"
        android:lineSpacingExtra="5sp"
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/sort_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallsSquare" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallsSquare"
        app:layout_constraintVertical_bias="0.446" />

    <View
        android:id="@+id/divider6"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/wallsSquare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.735" />

    <EditText
        android:id="@+id/priceFrom"
        android:layout_width="74dp"
        android:layout_height="42dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="numberSigned"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackButton" />

    <EditText
        android:id="@+id/priceTo"
        android:layout_width="74dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/to"
        android:inputType="numberSigned"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/priceFrom"
        app:layout_constraintTop_toBottomOf="@+id/accept" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/price"
        app:layout_constraintEnd_toStartOf="@+id/priceFrom"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackButton" />

</androidx.constraintlayout.widget.ConstraintLayout>