<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TilesScreenActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5sp"
        android:text="@string/List"
        android:textColor="#151522"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goBackButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="5sp"
        android:text="@string/cancel"
        android:textColor="#999999"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="426dp"
        android:layout_height="345dp"
        app:layout_constraintBottom_toTopOf="@+id/selectAnotherRemont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.139">

    </ListView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5sp"
        android:textColor="#222222"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:text="@string/recommended_for_buy" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5sp"
        android:textColor="#151522"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        android:text="@string/in_total" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="5sp"
        android:textColor="#151522"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        android:text="0₽" />

    <Button
        android:id="@+id/openAllMaterials"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="60dp"
        android:text="@string/open_all_materials"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/selectAnotherRemont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/selectAnotherRemont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="60dp"
        android:text="@string/choose_another_remont"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>