<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title"
        android:paddingHorizontal="16dp"
        android:paddingTop="50dp"
        android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:textSize="20sp"
    android:fontFamily="sans-serif"
    android:textStyle="normal"
    android:textColor="#ffffff"
    android:lineSpacingExtra="5sp"
    android:text="@string/title"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_tiles"
            android:contentDescription="TODO" />

        <View
            android:id="@+id/divider"
            android:layout_width="413dp"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="#33e4e4e4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:text="@string/important"
            android:textColor="#999999"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:text="@string/tiles"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tilesArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="127dp"
            android:layout_marginLeft="127dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:srcCompat="@drawable/ic_arrow_right" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>



